Map: map menu partial and clik accesibility

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -27,7 +27,12 @@ body {
 }
 
 a {
+  color: $color-1;
   text-decoration: none;
+
+  &:hover {
+    color: lighten($color-1, 10%);
+  }
 
   &[disabled] {
     display: inline-block;
