--- a/app/views/map/_map-menu.html.erb
+++ b/app/views/map/_map-menu.html.erb
@@ -28,7 +28,7 @@
     </li>
   </ul>
 
-  <ul class="list">
+  <ul class="list -mobile-fixed">
     <li>
       <a href="#" class="item btn-mapmenu-action -color-1" data-action="Download/toggle">
         <svg class="c-svg">
