--- a/app/assets/stylesheets/components/_map-menu.scss
+++ b/app/assets/stylesheets/components/_map-menu.scss
@@ -36,12 +36,45 @@
   width: 100%;
 
   .list {
+    position: relative;
+    z-index: 2;
     display: flex;
+    justify-content: space-between;
+    width: 100%;
+    background: $color-3;
+
+    @media #{$mq-mobile-large} {
+      justify-content: center;
+    }
+
+    @media #{$mq-tablet} {
+      width: auto;
+    }
+
+    // Mobile set the right list to a bottom fixed bar
+    &.-mobile-fixed {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      padding: 0 15px;
+      box-shadow: $shadow-2;
+      
+      @media #{$mq-tablet} {
+        position: relative;
+        bottom: auto;
+        left: auto;
+        width: auto;
+        padding: 0;
+        box-shadow: none;
+      }
+    }
 
     > li {
-      margin-right: 35px;
-      &:last-child {
-        margin-right: 0;
+      @media #{$mq-tablet} {
+        margin-right: 15px;
+        &:last-child {
+          margin-right: 0;
+        }
       }
     }
 
@@ -49,7 +82,7 @@
       @extend %reset-btn;
       display: flex;
       align-items: center;
-      padding: 13px 0; 
+      padding: 13px 10px; 
       font-weight: $font-weight-bold;
       font-size: 12px;      
       text-transform: uppercase;
@@ -59,9 +92,21 @@
         margin-right: 0;
       }
 
-      &.-color-1 { color: $color-1; }
-      &.-color-2 { color: $color-6; }
-      &.-color-3 { color: $color-4; }
+      // Colors
+      &.-color-1 { 
+        color: $color-1;
+        &:hover { color: lighten($color-1, 10%)}
+      }
+      
+      &.-color-2 { 
+        color: $color-6;
+        &:hover { color: lighten($color-6, 10%)}
+      }
+      
+      &.-color-3 { 
+        color: $color-4;
+        &:hover { color: lighten($color-4, 10%)}
+      }
 
     }
 
