General: modal view created and working

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,4 @@
  //= require leaflet
  */
 
-@import "settings", "fonts", "base", "layouts/*", "components/*";
+@import "settings", "fonts", "base", "mixins", "layouts/*", "components/*";
