Countries search implemented

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -25,12 +25,12 @@ $font-weight-normal: 400;
 $font-weight-bold:   700;
 
 /* Colors */
-$color-1:  #5aade4;
-$color-2:  #0f3046;
-$color-3:  #fff;
-$color-4:  #68299b;
-$color-5:  #fbfbfb;
-$color-6:  #f57823;
+$color-1:  #5aade4; // blue
+$color-2:  #0f3046; // black
+$color-3:  #fff;    // white
+$color-4:  #68299b; // purple
+$color-5:  #fbfbfb; // bone-white
+$color-6:  #f57823; // orange
 
 /* Shadows */
 $shadow-1: 0 7px 10px rgba(0, 0, 0, 0.1);
