--- a/app/assets/stylesheets/components/_list-grid.scss
+++ b/app/assets/stylesheets/components/_list-grid.scss
@@ -23,6 +23,11 @@
 
   & .item {
     width: 50%;
+    margin-bottom: 35px;
+
+    &:last-child {
+      margin-bottom: 80px;
+    }
 
     /* Default sizes */
     &.\-1-4 { width: 25%;    }
