--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,6 +1,6 @@
 <section class="country-index">
   <div class="wrapper">
-    <input class="c-title -normal search" value="Type the country name_" /><br/>
+    <input class="c-title -bigger search" id="search" value="Type the country name_" /><br/>
     <a href="#regions-list" class="c-button -filled -color-3">Search</a>
     <div id="regions-list"></div>
   </div>
