--- a/app/assets/stylesheets/components/_card-title.scss
+++ b/app/assets/stylesheets/components/_card-title.scss
@@ -2,11 +2,18 @@
  *
  *  <h4 class="c-card-title">{Content goes here}</h4>
  *
+ *  Text color classes:
+ *    - "-color-1":   blue color ($color-1)
+ *    - "-color-2": orange color ($color-6)
+ *    - "-color-3": purple color ($color-4)
+ *    - "-color-4": white color  ($color-3)
+ *    - "-color-5": black color  ($color-2)
+ *
  *  Optional classes:
  *    - "-border-1":   blue border ($color-1)
  *    - "-border-2": orange border ($color-6)
  *    - "-border-3": purple border ($color-4)
- *    - "-border-4": purple border ($color-3)
+ *    - "-border-4": white border  ($color-3)
  */
 .c-card-title {
   margin:  0;
@@ -31,6 +38,12 @@
       height:  3px;
     }
   }
+
+  &.-color-1 { color: $color-1; }
+  &.-color-2 { color: $color-6; }
+  &.-color-3 { color: $color-4; }
+  &.-color-4 { color: $color-3; }
+  &.-color-5 { color: $color-2; }
 
   &.-border-1:after { background-color: $color-1; }
   &.-border-2:after { background-color: $color-6; }
