--- a/app/assets/javascripts/templates/countries-list.hbs
+++ b/app/assets/javascripts/templates/countries-list.hbs
@@ -4,7 +4,7 @@
 <div class="c-list-grid">
   {{#each countries as |country|}}
     <div class="item -1-2 -tablet-1-3">
-      <a href="#">{{country.name}}</a>
+      <a href="/countries/{{country.iso}}">{{country.name}}</a>
     </div>
   {{/each}}
 </div>
