Modal: cleaning amendments

--- a/app/assets/javascripts/templates/map-filters.hbs
+++ b/app/assets/javascripts/templates/map-filters.hbs
@@ -1,9 +1,9 @@
 {{!-- BACKDROP --}}
-<div class="modal-backdrop btn-modal-close"></div>
+<div class="modal-backdrop js-btn-modal-close"></div>
 {{!-- WINDOW --}}
 <div class="modal-window">
   {{!-- Modal close button --}}
-  <button href="#" class="modal-close btn-modal-close">
+  <button href="#" class="modal-close js-btn-modal-close">
     <svg><use xlink:href="#shape-close"></use></svg>
   </button>
   
@@ -13,7 +13,7 @@
       <form action="">
         <h2 class='modal-title'>Filters</h2>
         <div class='c-map-filters'>
-          
+
         </div>
       </form>
     </div>
