List index reusable by cancer-types and others

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,8 +1,8 @@
 <section class="country-index">
   <div class="wrapper">
     <input class="c-title -bigger search" id="search" placeholder="Type the country name_" /><br/>
-    <a href="#regions-list" class="c-button -filled -color-3">Search</a>
-    <div id="regions-list"></div>
+    <a href="#collection-list" class="c-button -filled -color-3">Search</a>
+    <div id="collection-list"></div>
   </div>
 </section>
 
