--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -3,7 +3,7 @@
     <div id="map" class="map c-map"></div>
     <div class="intro-info wrapper">
       <div class="info">
-        <h1 class="c-title -big">Egypt</h1>
+        <h1 class="c-title -big"><%= @country && @country.name %></h1>
         <div class="c-numbers-grid">
           <div class="number-info">
             <label class="title">Projects</label>
