--- a/app/assets/javascripts/templates/countries-list.hbs
+++ b/app/assets/javascripts/templates/countries-list.hbs
@@ -1,10 +1,10 @@
 
-<h3 class="c-card-title -border-1 -color-5 -normal">{{name}}</h3>
+<h3 class="c-card-title -border-1 -color-5 -normal single-list-title">{{name}}</h3>
 
 <div class="c-list-grid">
   {{#each countries as |country|}}
     <div class="item -1-2 -tablet-1-3">
-      <a class="country-link" href="/countries/{{country.iso}}">{{country.name}}</a>
+      <a class="country-link" href="/countries/{{country.country_iso}}">{{country.country_name}}</a>
     </div>
   {{/each}}
 </div>
