Section index as a component to reuse

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,4 +1,4 @@
-<section class="country-index">
+<section class="c-section-index country-index">
   <div class="wrapper">
     <input class="c-title -bigger search" id="search" placeholder="Type the country name_" /><br/>
     <a href="#collection-list" class="c-button -filled -color-3">Search</a>
