--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -32,16 +32,14 @@
         </div>
       </div>
       <ul class="c-section-menu wrapper -color-0">
-        <li class="item"><%= link_to (t 'data'), '/', { :class => "-active"} %></li>
-        <li class="item"><%= link_to (t 'projects'), '/' %></li>
+        <li class="item"><%= link_to (t 'projects'), '/', { :class => "-active"} %></li>
         <li class="item"><%= link_to (t 'people'), '/' %></li>
         <li class="item"><%= link_to (t 'events'), '/' %></li>
-        <li class="item"><%= link_to (t 'posts'), '/' %></li>
       </ul>
     </div>
   </div>
 
-  <div class="country-data">
+  <!-- <div class="country-data">
     <div class="c-legend-map-container">
       <div class="c-map"></div>
 
@@ -56,5 +54,5 @@
         </ul>
       </div>
     </div>
-  </div>
+  </div> -->
 </section>
