Modal: render the modal as a partial

--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -10,6 +10,10 @@
 <!-- c-map-menu -->
 <%= render partial: "map-menu" %>
 
+<!-- c-map-filters -->
+<%= render partial: "map-filters" %>
+
+
 <!-- c-grid-proyects -->
 <div class="c-card-grid">
 
