--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
  *
  *= require_self
  //= require leaflet
- */
+ //= require chosen 
+*/
 
 @import "settings", "fonts", "base", "mixins", "layouts/*", "components/*";
