--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -150,15 +150,26 @@
 // MODAL WRAPPER
 .modal-wrapper {
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: auto;  
   height: 100%;
   max-height: 100%;
   width: 100%;
   top: 0;
   left: 0;
   padding: 60px;
+
   @media #{$mq-tablet}{
-    max-height: 450px;
+    overflow: visible;    
+  }
+
+
+  &.-has-scroll {
+    overflow-x: hidden;
+    overflow-y: auto;
+
+    @media #{$mq-tablet}{
+      max-height: 450px;
+    }
   }
 
   &.-has-footer {
