Fixes some issues with the gradient and update the styles for mobile

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -23,6 +23,7 @@
  */
 
 %reset-btn {
+  padding: 0;
   -webkit-appearance: none;
   border: 1px solid transparent;
   background: none;
@@ -33,7 +34,6 @@
   text-decoration: none;
   font-family: inherit;
 }
-
 
 .c-button {
   display: inline-block;
