--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -31,6 +31,7 @@ $color-3:  #fff;
 $color-4:  #68299b;
 $color-5:  #fbfbfb;
 $color-6:  #f57823;
+$color-7: #000;
 
 /* Shadows */
 $shadow-1: 0 7px 10px rgba(0, 0, 0, 0.1);
