--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,29 +1,26 @@
-// This component is for all the modal of the app
-// - The component is hidden by default until the class -active is added
-// - `-has-footer` class is when you have a footer inside the modal that you want to have always present (A submit button or something similar), even if you scroll through the modal
-
-//<div class="c-modal">
-// 	<div class="modal-backdrop btn-modal-close"></div>
-//
-// 	<div class="modal-window">
-// 	  <button href="#" class="modal-close btn-modal-close">
-// 	  	<svg><use xlink:href="#shape-close"></use></svg>
-// 	  </button>
-// 	  
-// 	  <div class="modal-wrapper {{#if hasFooter}}-has-footer{{/if}}">
-// 	    <div class="modal-content">
-// 	    	{ content }
-// 	    </div>
-// 	    
-// 	    {{#if hasFooter}}
-// 	      <div class="modal-footer">
-// 	      	{ content }
-// 	      </div>
-// 	    {{/if}}
-// 	  </div>
-// 	</div>
-//</div>
-
+/**
+ *
+ * 	This component is for all the modal of the app
+ *
+ *  <div class="c-modal">
+ *  	<div class="modal-window">
+ *  		<button href="#" class="modal-close js-btn-modal-close">
+ *  	 		<svg><use xlink:href="#shape-close"></use></svg>
+ *     	</button>
+ *      <div class="modal-wrapper">
+ *       	<div class="modal-content"> {content} </div>
+ *  		  {{#if -has-footer}}
+ *  			  <div class="modal-footer"> {content} </div>
+ *  		  {{/if}}
+ *  	  </div>
+ *    </div>
+ *  </div>
+ *
+ * 	Modifiers:
+ * 		- "-active": class to show the modal (hidden by default)
+ * 		- "-has-footer": tell the modal you want a fixed footer at its bottom
+ *
+ */
 
 // Layout
 .c-modal {
@@ -36,84 +33,45 @@
   height: 100%;
   opacity: 0;
   visibility: hidden;
-  
+  transition: all 0.2s $easeInOutSine;
+  background: rgba($color-7, .3);
+
   // Active styles
   &.-active {
     visibility: visible;
     opacity: 1;
 
-    .modal-backdrop {
-      opacity: 1;
-      visibility: visible;
-    }
-
     .modal-window {
-      opacity: 1;
-      visibility: visible;     
-      @media #{$mq-tablet}{
-        transform: translate(-50%,-50%);
+      @media #{$mq-tablet} {
+        transform: translate(-50%, -50%);
       }
     }
   }
 
-  .modal-backdrop {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.2s $easeInOutSine;
-    background: rgba(255,255,255,0.25);
-  }
-
   .modal-window {
     position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.2s $easeInOutSine;
+    top: $wrapper-mobile-padding;
+    left: $wrapper-mobile-padding;
+    width: calc(100% - 2 * #{$wrapper-mobile-padding});
+    height: calc(100% - 2 * #{$wrapper-mobile-padding});
+    transition: transform 0.2s $easeInOutSine;
+    background: $color-3;
 
-    @media #{$mq-tablet}{
+    @media #{$mq-mobile-large} {
+      top: $wrapper-tablet-padding;
+      left: $wrapper-tablet-padding;
+      width: calc(100% - 2 * #{$wrapper-tablet-padding});
+      height: calc(100% - 2 * #{$wrapper-tablet-padding});
+    }
+
+    @media #{$mq-tablet} {
       width: 700px;
       top: 50%;
-      left: 50%; 
+      left: 50%;
       height: auto;
       min-height: 100px;
-      transform: translate(-50%,-60%);
-    }    
-  }
-}
-
-
-.modal-window {
-  background: $color-3;
-  border: none;
-  box-shadow: $shadow-1;
-
-  // GRADIENTS
-  &:before, &:after {
-    content: "";
-    position: absolute;
-    height: 20px;
-    width: calc(100% - 8px);
-    left: 0;
-  }
-
-  &:before {
-    top: 0;
-    background: linear-gradient(to top,rgba($color-3,1),rgba($color-3,0));
-  }
-
-  &:after {
-    bottom: 0;
-    background: linear-gradient(to top,rgba($color-3,0),rgba($color-3,1));
+      transform: translate(-50%, -60%);
+    }
   }
 
   .modal-close {
@@ -124,178 +82,132 @@
     right: 0px;
     width: 40px;
     height: 40px;
-    z-index: 2;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 1; /* Otherwise, it won't be reachable */
 
     svg {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
       width: 20px;
       height: 20px;
-      margin: auto;
       fill: $color-2;
     }
 
-    &:hover {
-      svg {
-        fill: lighten($color-2,10%);
-      }
+    &:hover svg { fill: lighten($color-2, 10%); }
+  }
+
+  // MODAL WRAPPER
+  .modal-wrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    padding: $wrapper-mobile-padding;
+    padding-top: 40px; /* Padding needed for the close button */
+
+    @media #{$mq-mobile-large} {
+      padding:$wrapper-tablet-padding;
+      padding-top: 40px; /* Padding needed for the close button */
     }
-  }
-}
 
-
-// MODAL WRAPPER
-.modal-wrapper {
-  overflow-x: hidden;
-  overflow-y: auto;  
-  height: 100%;
-  max-height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  padding: 60px;
-
-  @media #{$mq-tablet}{
-    overflow: visible;    
-  }
-
-
-  &.-has-scroll {
-    overflow-x: hidden;
-    overflow-y: auto;
-
-    @media #{$mq-tablet}{
+    @media #{$mq-tablet} {
+      padding: $wrapper-padding;
       max-height: 450px;
     }
+
+    /* Gradients for the content */
+    &:before, &:after {
+      content: "";
+      position: absolute;
+      height: 20px;
+      width: 100%;
+      left: 0;
+    }
+
+    &:before {
+      top: 40px;
+      background: linear-gradient(to bottom, rgba($color-3, 1), rgba($color-3, 0));
+      z-index: 1; /* Mandatory for iOS */
+
+      @media #{$mq-tablet} {
+        top: $wrapper-padding;
+      }
+    }
+
+    // GRADIENTS
+    &:after {
+      bottom: $wrapper-mobile-padding;
+      background: linear-gradient(to top, rgba($color-3, 1), rgba($color-3, 0));
+      z-index: 1; /* Mandatory for iOS */
+
+      @media #{$mq-mobile-large} {
+        bottom: $wrapper-tablet-padding;
+      }
+
+      @media #{$mq-tablet} {
+        bottom: $wrapper-padding;
+      }
+    }
   }
 
-  &.-has-footer {
-    border-bottom: 66px solid transparent;
-  }
+  &.-has-footer .modal-wrapper:after { content: none; }
 
   .modal-content {
-    height: auto;
+    flex-grow: 1;
     width: 100%;
-    outline: none;
+    padding: 20px 0; /* The gradient isn't applied on the first and last line */
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    line-height: 1.6;
 
-    font-size: 15px;
-    color: $color-2;
-  }
-}
-
-
-// MODAL HEADER
-.modal-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: $color-3;
-  padding: 20px;
-  @include clearfix();
-
-  ul {
-    margin: 15px 0;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%,0);
-    float: left;
-    padding: 4px;
-    display: flex;
-    justify-content: center;
-    border: 1px solid $color-1;
-    border-radius: 45px;
-
-    li {
-      font-size: 19px;
-      padding: 10px 20px 7px;
-      color: $color-2;
-      cursor: pointer;
-      font-weight: 500;
-      border-radius: 40px;
-      
-      &:hover {
-        background: lighten($color-3,1%);
-        text-decoration: underline;
-      }
-     
-      &.-active {
-        color: $color-3;
-        background: $color-1;
-      }
+    .modal-title {
+    	margin: 0;
+  		font-size: $font-size-x-medium;
+  		font-weight: $font-weight-bold;
     }
-  }
-}
 
-// MODAL FOOTER
-.modal-footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background: $color-3;
-  padding: 15px 0;
-  @include clearfix();
-  border-top: 1px solid $color-5;
-}
-
-
-// MODAL CONTENT
-.modal-content {
-  font-size: 13px;
-
-  .modal-title {
-  	margin: 0;
-  	color: $color-2;
-		font-size: $font-size-x-medium;
-		font-weight: $font-weight-bold;
-  }
-
-
-  br {
-    display: none;
-  }
-
-  strong {
-    font-weight: 500;
-  }
-
-  ul {
-    list-style-type: disc;
-    color: $color-2;
-    font-size: 13px;
-
-    > li {
+    ul {
       list-style-type: disc;
-      padding: 10px 0 0;
-      margin-left: 20px;
-      line-height: 1.25;
 
-      &:first-child {
-        padding: 0;
+      > li {
+        padding: 10px 0 0;
+        margin-left: 20px;
+        line-height: 1.25;
+
+        &:first-child { padding: 0; }
+
+        > p { margin: 0;}
       }
+    }
 
-      > p {
-        margin: 0;
+    p {
+      margin-top: 10px;
+      margin-bottom: 10px;
+
+      a:not(.btn) {
+        color: $color-1;
+        &:hover { color: lighten($color-1, 5%); }
       }
-
     }
   }
 
-  p {
-    line-height: 1.5;
-    margin-bottom: 10px;
-    margin-top: 10px;
+  .modal-footer {
+    position: relative;
+    flex-basis: 70px;
+    flex-shrink: 0;
+    width: 100%;
+    background: $color-3;
+    padding-top: 40px;
 
-    a:not(.btn) {
-      color: $color-1;
-      
-      &:hover{
-        color: lighten($color-1,5%);
-      }
+    // GRADIENTS
+    &:before {
+      content: "";
+      position: absolute;
+      height: 20px;
+      width: 100%;
+      left: 0;
+      top: -20px;
+      background: linear-gradient(to top, rgba($color-3, 1), rgba($color-3, 0));
     }
   }
 }
