--- a/app/views/map/_map-filters.html.erb
+++ b/app/views/map/_map-filters.html.erb
@@ -14,59 +14,73 @@
 
           <h2 class='modal-title'>Filters</h2>
           <div class='c-map-filters'>
+
+            <!-- COMMON FILTERS -->
             <div class="grid-filters">
               <div class="grid-item">
                 <div class="c-select">
-                  <select class="chosen-select" multiple data-placeholder="All countries">
+                  <select name="countries" class="chosen-select" multiple data-placeholder="All countries">
                     <option value="">All countries</option>
                     <% @countries.each do |country| %>
-                      <option value="<%= country.iso %>"><%= country.name %></option>
+                      <option value="<%= country['iso'] %>"><%= country['name'] %></option>
                     <% end %>
                   </select>
                 </div>
               </div>
               <div class="grid-item">
                 <div class="c-select">
-                  <select class="chosen-select" multiple data-placeholder="All organizations types">
+                  <select name="organization_types" class="chosen-select" multiple data-placeholder="All organizations types">
                     <option value="">All organizations types</option>
                     <% @organization_types.each do |organization_type| %>
-                      <option value="<%= organization_type.id %>"><%= organization_type.name %></option>
+                      <option value="<%= organization_type['id'] %>"><%= organization_type['name'] %></option>
                     <% end %>
                   </select>
                 </div>
               </div>
               <div class="grid-item">
                 <div class="c-select">
-                  <select class="chosen-select" multiple data-placeholder="All cancer types">
+                  <select name="cancer_types" class="chosen-select" multiple data-placeholder="All cancer types">
                     <option value="">All cancer types</option>
                     <% @cancer_types.each do |cancer_type| %>
-                      <option value="<%= cancer_type.id %>"><%= cancer_type.name %></option>
+                      <option value="<%= cancer_type['id'] %>"><%= cancer_type['name'] %></option>
                     <% end %>
                   </select>
                 </div>
               </div>
               <div class="grid-item">
                 <div class="c-select">
-                  <select class="chosen-select" multiple data-placeholder="All organizations">
+                  <select name="organizations" class="chosen-select" multiple data-placeholder="All organizations">
                     <option value="">All organizations</option>
                     <% @organizations.each do |organization| %>
-                      <option value="<%= organization.id %>"><%= organization.name %></option>
+                      <option value="<%= organization['id'] %>"><%= organization['name'] %></option>
                     <% end %>
                   </select>
                 </div>
               </div>
               <div class="grid-item">
                 <div class="c-select">
-                  <select class="chosen-select" multiple data-placeholder="All project types">
+                  <select name="project_types" class="chosen-select" multiple data-placeholder="All project types">
                     <option value="">All project types</option>
                     <% @project_types.each do |project_type| %>
-                      <option value="<%= project_type.id %>"><%= project_type.name %></option>
+                      <option value="<%= project_type['id'] %>"><%= project_type['name'] %></option>
                     <% end %>
                   </select>
                 </div>
               </div>
             </div>
+
+            <!-- DATE FILTERS -->
             <div class="grid-filters">
+              <div class="grid-item">
+                <div class="c-pickadate">
+                  <input type="text" name="begin" class="pickadate-input">
+                </div>
+              </div>
+              <div class="grid-item">
+                <div class="c-pickadate">
+                  <input type="text" name="end" class="pickadate-input">
+                </div>
+              </div>                          
             </div>
 
             <div class="grid-buttons">
