Filters: pickadate filters working

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,9 @@
  *
  *= require_self
  //= require leaflet
- //= require chosen 
+ //= require chosen
+ //= require pickadate/classic
+ //= require pickadate/classic.date
 */
 
 @import "settings", "fonts", "base", "mixins", "layouts/*", "components/*";
