--- a/app/views/map/_map-filters.html.erb
+++ b/app/views/map/_map-filters.html.erb
@@ -73,12 +73,16 @@
             <div class="grid-filters">
               <div class="grid-item">
                 <div class="c-pickadate">
-                  <input type="text" name="begin" class="pickadate-input">
+                  <label for="pickadate-start-input">Start date</label>
+                  <input type="text" name="start" id="pickadate-start-input" class="pickadate-input">
+                  <div id="pickadate-start-container" class="pickadate-container" autofocus></div>
                 </div>
               </div>
               <div class="grid-item">
                 <div class="c-pickadate">
-                  <input type="text" name="end" class="pickadate-input">
+                  <label for="pickadate-end-input">End date</label>
+                  <input type="text" name="end" id="pickadate-end-input" class="pickadate-input">
+                  <div id="pickadate-end-container" class="pickadate-container" autofocus></div>
                 </div>
               </div>                          
             </div>
