--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,8 +1,8 @@
 <section class="c-section-index country-index">
-  <div class="wrapper">
-    <input class="c-title -bigger search" id="search" placeholder="Type the country name_" /><br/>
-    <a href="#collection-list" class="c-button -filled -color-3">Search</a>
-    <div id="collection-list"></div>
+  <div class="search-container wrapper">
+    <input class="c-title -bigger js-search-list" id="search-input" placeholder="<%= t 'search_placeholder' %>" /><br/>
+    <a href="#search-list" class="c-button -filled -color-3"><%= t 'search' %></a>
+    <div id="search-list"></div>
   </div>
 </section>
 
