--- a/app/assets/javascripts/templates/countries-list.hbs
+++ b/app/assets/javascripts/templates/countries-list.hbs
@@ -1,5 +1,5 @@
 
-<h3 class="c-card-title -border-1 -color-5 -normal single-list-title">{{name}}</h3>
+<h3 class="c-card-title -border-1 -color-5 -normal single-list-title">{{region_name}}</h3>
 
 <div class="list-grid">
   {{#each countries as |country|}}
