Adds the basic tooltip

--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -7,6 +7,10 @@
 	</ul>
 </div>
 
+<div id="map-layers-tooltip" class="c-tooltip -tip-left">
+	hola, soy tooltip y tú?
+</div>
+
 <!-- c-map-menu -->
 <%= render partial: "map-menu" %>
 
@@ -158,4 +162,3 @@
 	  <p>Single-arm trials (SATs) have led to regulatory approval of oncology products in case of dramatic activity in well-defined populations with high unmet...</p>
 	</div>
 </div>
-
