--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,7 +1,7 @@
 <section class="country">
   <div class="c-section-intro -color-4">
     <div id="map" class="map c-map"></div>
-    <div class="intro-info wrapper">
+    <div class="intro-info">
       <div class="info">
         <h1 class="c-title -big"><%= @country.country_name %></h1>
         <div class="c-numbers-grid">
