General collaborator & project leads markers

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -32,9 +32,9 @@
         </div>
       </div>
       <ul class="c-section-menu wrapper -color-0">
-        <li class="item"><%= link_to (t 'projects'), '/', { :class => "-active"} %></li>
-        <li class="item"><%= link_to (t 'people'), '/' %></li>
-        <li class="item"><%= link_to (t 'events'), '/' %></li>
+        <li><%= link_to (t 'projects'), country_path(request.query_parameters.merge({ type: 'org-project-markers' })), :class => !params['type'] ? '-active' : active_param?('type','org-project-markers') %></li>
+        <li><%= link_to (t 'people'), country_path(request.query_parameters.merge({ type: 'org-people-markers' })), :class => active_param?('type','org-people-markers') %></li>
+        <li><%= link_to (t 'events'), country_path(request.query_parameters.merge({ type: 'org-event-markers' })), :class => active_param?('type','org-event-markers') %></li>
       </ul>
     </div>
   </div>
