--- a/app/assets/stylesheets/components/_map-marker.scss
+++ b/app/assets/stylesheets/components/_map-marker.scss
@@ -50,6 +50,32 @@
     }
   }
 
+  &.-collaborator{
+    background: $color-6;
+
+    .value {
+      color: $color-3;
+      font-size: $font-size-normal;
+    }
+
+    &:hover {
+      background: darken($color-6, 3.5%);
+    }
+  }
+
+  &.-lead{
+    background: $color-3;
+
+    .value {
+      color: $color-2;
+      font-size: $font-size-normal;
+    }
+
+    &:hover {
+      background: darken($color-3, 2.5%);
+    }
+  }
+
 	.arc {
 
 	}
