--- a/app/assets/stylesheets/components/_section-index.scss
+++ b/app/assets/stylesheets/components/_section-index.scss
@@ -51,7 +51,20 @@
       font-size: $font-size-huge;
     }
 
+    &.c-title.-bigger { line-height: 75px; }
+
     &::-webkit-input-placeholder {
+      color: $color-2;
+      opacity: 1;
+    }
+
+    &::-moz-placeholder { /* Firefox 19+ */
+      color: $color-2;
+      opacity: 1;
+    }
+
+
+    &:-ms-input-placeholder { /* IE 10+ */
       color: $color-2;
     }
   }
