--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -26,12 +26,12 @@ $font-weight-bold:   700;
 
 /* Colors */
 $color-1:  #5aade4; // blue
-$color-2:  #0f3046; // black
+$color-2:  #0f3046; // dark
 $color-3:  #fff;    // white
 $color-4:  #68299b; // purple
 $color-5:  #fbfbfb; // bone-white
 $color-6:  #f57823; // orange
-$color-7: #000;
+$color-7:  #000;    // black
 
 /* Shadows */
 $shadow-1: 0 7px 10px rgba(0, 0, 0, 0.1);
