--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -13,4 +13,41 @@
       display: inherit;
     }
   }
+
+  /* !important needed to force the change from the library */
+  .leaflet-popup {
+    bottom: 2px !important;
+
+    .leaflet-popup-content { margin: 0; }
+
+    .leaflet-popup-content-wrapper {
+      padding: 25px 40px;
+      border-radius: 0;
+      max-height: 190px;
+      max-width: 190px;
+      overflow-y: auto;
+      font-weight: $font-weight-bold;
+    }
+
+    .leaflet-popup-close-button {
+      display: none;
+    }
+
+    .people {
+      display: flex;
+      flex-flow: column;
+      text-align: center;
+    }
+
+    .person {
+      font-size: $font-size-x-small;
+      color: $color-2;
+      margin: 0;
+      margin-bottom: 12px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
 }
